change url in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -28,8 +28,8 @@
       <h3>
       	Example usage:
       </h3>
-      <code>https://safe-tundra-77122.herokuapp.com/December%2015,%202015</code><br/>
-      <code>https://safe-tundra-77122.herokuapp.com/1450137600</code>
+      <code>https://tranquil-hamlet-26878.herokuapp.com/December%2015,%202015</code><br/>
+      <code>https://tranquil-hamlet-26878.herokuapp.com/1450137600</code>
       <h3>Example output:</h3>
       <code>{ "unix": 1450137600, "natural": "December 15, 2015" }</code>
     </div>
